[tool.poetry]
name = "changebackcoloe"
version = "0.1.0"
description = ""
authors = ["Andy <zhangruibin021@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
requests-toolbelt = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
